<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.valko.scoot.viewmodels.Step2ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:src="@drawable/ic_back_btn"
            app:layout_constraintLeft_toLeftOf="@+id/left_border"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/refresh_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="@+id/refresh_text"
            app:layout_constraintRight_toLeftOf="@+id/refresh_text"
            app:layout_constraintTop_toTopOf="@+id/refresh_text" />

        <TextView
            android:id="@+id/refresh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:paddingStart="12dp"
            android:text="@string/step2_refresh"
            android:textColor="@color/black_2a"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_btn"
            app:layout_constraintRight_toRightOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="@+id/back_btn" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    style="@style/title_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/step2_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".8"
                    android:layout_marginTop="30dp"/>

                <ImageView
                    android:id="@+id/car_logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="25dp"
                    app:centerCrop="@{false}"
                    app:image="@{viewModel.car.logoUrl}"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintWidth_percent=".65" />

                <TextView
                    android:id="@+id/reg_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/yellow_eb_r8"
                    android:fontFamily="@font/rubik_medium"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@{viewModel.car.regNumber}"
                    android:textAlignment="center"
                    android:textColor="@color/black_2a"
                    android:textSize="32sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/car_logo" />

                <!--***************************** CAR TYPE **************************************-->
                <TextView
                    android:id="@+id/car_type_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/car_type"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reg_number" />

                <TextView
                    android:id="@+id/car_type"
                    style="@style/info_regular_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.car.type}"
                    app:layout_constraintLeft_toRightOf="@+id/car_type_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/car_type_title" />

                <!--******************** REGISTERED *********************************************-->
                <TextView
                    android:id="@+id/registered_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/registered"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/car_type" />

                <TextView
                    android:id="@+id/registered"
                    style="@style/info_regular_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.car.regDate}"
                    app:layout_constraintLeft_toRightOf="@+id/registered_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/registered_title" />

                <!--******************** COLOR *********************************************-->
                <TextView
                    android:id="@+id/color_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/colour"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registered" />

                <TextView
                    android:id="@+id/color"
                    style="@style/info_regular_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.car.color}"
                    app:layout_constraintLeft_toRightOf="@+id/color_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/color_title" />

                <!--******************** TAX *********************************************-->
                <TextView
                    android:id="@+id/tax_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tax"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/color" />

                <ImageView
                    android:id="@+id/tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@{viewModel.car.tax?@drawable/ic_check:null}"
                    app:layout_constraintLeft_toRightOf="@+id/tax_title"
                    app:layout_constraintTop_toTopOf="@+id/tax_title"
                    app:layout_constraintBottom_toBottomOf="@+id/tax_title"/>

                <!--******************** TAX DATE *********************************************-->
                <TextView
                    android:id="@+id/tax_date_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tax_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tax" />

                <TextView
                    android:id="@+id/tax_date"
                    style="@style/info_regular_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.car.taxExpDate}"
                    app:layout_constraintLeft_toRightOf="@+id/tax_date_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tax_date_title" />

                <!--******************** TAX *********************************************-->
                <TextView
                    android:id="@+id/mot_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mot"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tax_date" />

                <ImageView
                    android:id="@+id/mot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@{viewModel.car.MOT?@drawable/ic_check:null}"
                    app:layout_constraintLeft_toRightOf="@+id/mot_title"
                    app:layout_constraintTop_toTopOf="@+id/mot_title"
                    app:layout_constraintBottom_toBottomOf="@+id/mot_title"/>

                <!--******************** MOT DATE *********************************************-->
                <TextView
                    android:id="@+id/mot_date_title"
                    style="@style/info_medium_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mot_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mot" />

                <TextView
                    android:id="@+id/mot_date"
                    style="@style/info_regular_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.car.MOTExpDate}"
                    app:layout_constraintLeft_toRightOf="@+id/mot_date_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mot_date_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:layout_marginBottom="20dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_1c"
            app:borderWidth="0dp"
            app:fabCustomSize="60dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintRight_toRightOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>